# gaia-lagacy

./: .gitignore  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
ark/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
ark/migrations/: 0001_initial.py
core/: urls.py  views.py
gaia/: asgi.py  settings.py  urls.py  wsgi.py
static/: gaia.css
templates/: base.html
templates/ark/: animal_detail.html  animal_list.html  start.html
templates/core/: home.html
