[tool.poetry]
name = "chimere"
version = "0.1.0"
description = ""
authors = ["Dustin Kroeger <alex@tailbyte.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-environ = "^0.10.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
